--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.jar
 *.war
 *.ear
+*.gz
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -16,8 +17,8 @@ hs_err_pid*
 /target/
 /output/
 /bin/
-
 /lsp/
 
+#IntelliJ
 /.idea/
 *.iml
