analysis for covered road distance in possible service areas

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<version>${matsim.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.matsim.contrib</groupId>
+			<artifactId>freight</artifactId>
+			<version>${matsim.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
