--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,java,maven,linux,windows,intellij,eclipse
+/matsim-kelheim.iml
+/.idea/
+/lsp/conf/
