--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<version>${matsim.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>one.util</groupId>
+			<artifactId>streamex</artifactId>
+			<version>0.7.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
