--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 		<!-- snapshot == not recommended: rather use PR-labelled release!-->
 <!--		<matsim.version>14.0-SNAPSHOT</matsim.version>-->
-		<matsim.version>14.0-2022w01</matsim.version>
+		<matsim.version>15.0-SNAPSHOT</matsim.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
