--- a/src/main/R/badWeather/.gitignore
+++ b/src/main/R/badWeather/.gitignore
@@ -7,4 +7,7 @@ demandModel.nb.html
 badWeatherDemo.nb.html
 badWeatherDemo.html
 demandModel.html
-resultDemo.Rmd
+resultDemo.html
+googleModel.html
+resultDemo_files/
+googleModel_files/
