--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
 
 		<!-- snapshot == not recommended: rather use PR-labelled release!-->
 <!--		<matsim.version>14.0-SNAPSHOT</matsim.version>-->
-		<matsim.version>14.0-2022w01</matsim.version>
+		<!--<matsim.version>14.0-2022w01</matsim.version>-->
+		<matsim.version>15.0-PR2283</matsim.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -67,6 +68,12 @@
 		<dependency>
 			<groupId>org.matsim.contrib</groupId>
 			<artifactId>drt</artifactId>
+			<version>${matsim.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.matsim.contrib</groupId>
+			<artifactId>drt-extensions</artifactId>
 			<version>${matsim.version}</version>
 			<scope>compile</scope>
 		</dependency>
