--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,20 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.matsim.contrib</groupId>
+			<artifactId>emissions</artifactId>
+			<version>${matsim.version}</version>
+			<scope>compile</scope>
+			<exclusions>
+				<!-- Conflict with the OSM reader -->
+				<exclusion>
+					<groupId>com.google.protobuf</groupId>
+					<artifactId>protobuf-java</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 		<!-- TODO: May be added later
 		<dependency>
 			<groupId>org.matsim.contrib</groupId>
