--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,5 +16,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    env:
-      MAVEN_OPTS: -Xmx12G
+#    env:
+#      MAVEN_OPTS: -Xmx7G
