--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 		<artifactId>matsim-all</artifactId>
 
 		<!-- PR-labelled release -->
-		<version>2025.0-PR3549</version> <!-- PR3549 is from November 07, 2024 -->
+<!--		<version>2025.0-PR3549</version> &lt;!&ndash; PR3549 is from November 07, 2024 &ndash;&gt;-->
+		<version>2025.0-SNAPSHOT</version>
 
 		<!-- snapshot == not recommended: rather use PR-labelled release!-->
 		<!--		<version>16.0-SNAPSHOT</matsim.version>-->
